fix menu position on mobile

--- a/src/pages/Classes/classes.scss
+++ b/src/pages/Classes/classes.scss
@@ -1,6 +1,6 @@
 .data-page-container {
   padding: 30px 30px 120px 30px;
-  min-height: calc(100vh - 123px);
+  min-height: calc(100vh - 213px);
   @media only screen and (max-width: 768px) {
     padding: 20px 20px 80px 20px;
     min-height: calc(100vh - 103px);
